add main function to initialize and run poem application

--- a/Poem1/Poem1.vcxproj
+++ b/Poem1/Poem1.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\project_v1\project_v1\poems_cleaned.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
