create a new file for tests

--- a/Poem1/Poem1.vcxproj
+++ b/Poem1/Poem1.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="tests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\project_v1\project_v1\poems_cleaned.txt" />
