--- a/Poem1/Poem1.vcxproj.filters
+++ b/Poem1/Poem1.vcxproj.filters
@@ -23,6 +23,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\..\project_v1\project_v1\poems_cleaned.txt" />
+    <Text Include="poems_tagged.txt" />
   </ItemGroup>
 </Project>
